--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
             <img src="plan.jpg" alt="a plan">
         </section>
     </main>
-    <script src="app.js"></script>
+    <script src="hr.js"></script>
 </body>
 </html>
