--- a/performance.html
+++ b/performance.html
@@ -58,6 +58,6 @@
             </div>
             <button class="calculate">Calculate</button>
     </main>
-    <script src="app.js"></script>
+    <script src="performance.js"></script>
 </body>
 </html>
