made the last part (plan) functional, only need a cleanup to reduce potential redundant code

--- a/hr.html
+++ b/hr.html
@@ -45,7 +45,7 @@
             <div class="zoneheader zones">
                 <p>Zone</p>
                 <p>Intensity</p>
-                <p>% of MaxHR</p>
+                <p>% MaxHR</p>
                 <p>Pers MaxHR</p>
             </div>
             <div class="zone1 zones">
