--- a/plan.html
+++ b/plan.html
@@ -37,13 +37,13 @@
                     <select id="runs">
                         <option value="1">One</option>
                         <option value="2">Two</option>
-                        <option value="3">Three</option>
+                        <option value="3" selected>Three</option>
                         <option value="4">Four</option>
                         <option value="5">Five</option>
                     </select>
                 </label>
             </div>
-            <button>Simulate Plan</button>
+            <button class="simulateplan">Simulate Plan</button>
         </section>
         <section class="table">
             <div class="zoneheader zones planzone">
@@ -51,33 +51,33 @@
                 <p>Type</p>
                 <p>% of MaxHR</p>
             </div>
-            <div class="zone1 zones">
+            <div class="zone1 zones zonevalue">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
-            <div class="zone2 zones">
+            <div class="zone2 zones zonevalue">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
-            <div class="zone3 zones">
+            <div class="zone3 zones zonevalue">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
-            <div class="zone4 zones">
+            <div class="zone4 zones zonevalue">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
-            <div class="zone5 zones">
+            <div class="zone5 zones zonevalue">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
         </section>
     </main>
-    <script src="app.js"></script>
+    <script src="plan.js"></script>
 </body>
 </html>
