fixed some minor things to make things more accessible accross different devices

--- a/hr.html
+++ b/hr.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="mobilevisible">
-            <h1>RunApp</h1>
+            <a href="index.html"><h1>RunApp</h1></a>
             <div class="menu">
                 <span></span>
                 <span></span>
@@ -45,7 +45,7 @@
             <div class="zoneheader zones">
                 <p>Zone</p>
                 <p>Intensity</p>
-                <p>% MaxHR</p>
+                <p>%MaxHR</p>
                 <p>Pers MaxHR</p>
             </div>
             <div class="zone1 zones">
