--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="mobilevisible">
-            <h1>RunApp</h1>
+            <a href="index.html"><h1>RunApp</h1></a>
             <div class="menu">
                 <span></span>
                 <span></span>
