--- a/performance.html
+++ b/performance.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="mobilevisible">
-            <h1>RunApp</h1>
+            <a href="index.html"><h1>RunApp</h1></a>
             <div class="menu">
                 <span></span>
                 <span></span>
@@ -24,7 +24,7 @@
             <li><a href="plan.html">Plan</a></li>
         </ul>
     </nav>
-    <main class="performance sections">
+    <main class="performance">
             <div class="calcperformance">
                 <div class="buttons">
                     <button class="active speed">Speed</button><button class="duration">Duration</button><button class="distance">Distance</button>
