fixed an issue with navbar not sticking to mainpage, also added copyright logo in footer with github name next to it

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>RunApp</title>
 </head>
 <body>
-    <nav>
-        <div class="mobilevisible">
+    <nav class="navbar">
+        <nav class="mainnav">
             <a href="index.html"><h1>RunApp</h1></a>
             <div class="menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-        </div>
+        </nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="performance.html">Performance</a></li>
@@ -47,6 +47,9 @@
             <img src="plan.jpg" alt="a plan">
         </section>
     </main>
+    <footer>
+        <p>&copy; jrotstejn</p>
+    </footer>
     <script src="hr.js"></script>
 </body>
 </html>
