--- a/performance.html
+++ b/performance.html
@@ -8,15 +8,15 @@
     <title>RunApp</title>
 </head>
 <body>
-    <nav>
-        <div class="mobilevisible">
+    <nav class="navbar">
+        <nav class="mainnav">
             <a href="index.html"><h1>RunApp</h1></a>
             <div class="menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-        </div>
+        </nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="performance.html">Performance</a></li>
@@ -24,7 +24,7 @@
             <li><a href="plan.html">Plan</a></li>
         </ul>
     </nav>
-    <main class="performance">
+    <main class="subpagesmain">
             <div class="calcperformance">
                 <div class="buttons">
                     <button class="active speed">Speed</button><button class="duration">Duration</button><button class="distance">Distance</button>
@@ -58,6 +58,9 @@
             </div>
             <button class="calculate">Calculate</button>
     </main>
+    <footer>
+        <p>&copy; jrotstejn</p>
+    </footer>
     <script src="performance.js"></script>
 </body>
 </html>
