--- a/plan.html
+++ b/plan.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <nav>
-        <div class="mobilevisible">
+    <nav class="navbar">
+        <nav class="mainnav">
             <a href="index.html">
                 <h1>RunApp</h1>
             </a>
@@ -20,7 +20,7 @@
                 <span></span>
                 <span></span>
             </div>
-        </div>
+        </nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="performance.html">Performance</a></li>
@@ -28,7 +28,7 @@
             <li><a href="plan.html">Plan</a></li>
         </ul>
     </nav>
-    <main class="planmain">
+    <main class="subpagesmain">
         <section class="plan">
             <div class="inputs">
                 <div>
@@ -57,33 +57,36 @@
                 <p>Type</p>
                 <p>% of MaxHR</p>
             </div>
-            <div class="zone1 zones zonevalue">
+            <div class="zone1 zones zonevalue planzone">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
-            <div class="zone2 zones zonevalue">
+            <div class="zone2 zones zonevalue planzone">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
-            <div class="zone3 zones zonevalue">
+            <div class="zone3 zones zonevalue planzone">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
-            <div class="zone4 zones zonevalue">
+            <div class="zone4 zones zonevalue planzone">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
-            <div class="zone5 zones zonevalue">
+            <div class="zone5 zones zonevalue planzone">
                 <p class="day"></p>
                 <p class="type"></p>
                 <p class="maxhr"></p>
             </div>
         </section>
     </main>
+    <footer>
+        <p>&copy; jrotstejn</p>
+    </footer>
     <script src="plan.js"></script>
 </body>
 
