--- a/hr.html
+++ b/hr.html
@@ -8,15 +8,15 @@
     <title>RunApp</title>
 </head>
 <body>
-    <nav>
-        <div class="mobilevisible">
+    <nav class="navbar">
+        <nav class="mainnav">
             <a href="index.html"><h1>RunApp</h1></a>
             <div class="menu">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-        </div>
+        </nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="performance.html">Performance</a></li>
@@ -24,7 +24,7 @@
             <li><a href="plan.html">Plan</a></li>
         </ul>
     </nav>
-    <main class="heartmain">
+    <main class="subpagesmain">
         <form action="">
             <section class="hr">
             
@@ -80,6 +80,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>&copy; jrotstejn</p>
+    </footer>
     <script src="hr.js"></script>
 </body>
 </html>
