--- a/plan.html
+++ b/plan.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <title>RunApp</title>
 </head>
 
@@ -28,9 +31,8 @@
             <li><a href="plan.html">Plan</a></li>
         </ul>
     </nav>
-    <main class="subpagesmain">
-        <section class="plan">
-            <div class="inputs">
+    <main>
+            <section class="inputs">
                 <div>
                     <label for="goal">Goal:</label>
                     <select id="goal">
@@ -48,9 +50,8 @@
                         <option value="5">Five</option>
                     </select>
                 </div>
-            </div>
+            </section>
             <button class="simulateplan">Simulate Plan</button>
-        </section>
         <section class="table">
             <div class="zoneheader zones planzone">
                 <p>Day</p>
