--- a/performance.html
+++ b/performance.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <title>RunApp</title>
 </head>
 <body>
@@ -24,8 +27,7 @@
             <li><a href="plan.html">Plan</a></li>
         </ul>
     </nav>
-    <main class="subpagesmain">
-            <div class="calcperformance">
+    <main class="performancemain">
                 <div class="buttons">
                     <button class="active speed">Speed</button><button class="duration">Duration</button><button class="distance">Distance</button>
                 </div>
@@ -39,7 +41,7 @@
                     </div>
                     <div class="valuegroup">
                         <p class="duration">Duration</p>
-                        <div class="inputgroup inputgroup2">
+                        <div class="inputgroup">
                                 <input id="hours" type="number" class="durationInput" min="0" step="1">
                                 <p>h</p>
                                 <input id="minutes" type="number" class="durationInput" min="0" max="59" step="1">
@@ -55,7 +57,7 @@
                         <p>km/h</p> 
                         </div>
                     </div>
-            </div>
+                </div>
             <button class="calculate">Calculate</button>
     </main>
     <footer>
