--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <main>
         <section class="sections performancesection visiblesection">
-            <p>Calculate your speed,distance or duration. All values are interchangeable
+            <p>Calculate your speed,distance or duration. All values are interchangeable.
                 <br><br>
                 <a href="performance.html">Calculate here</a>
             </p>
