complete visual overhaul

--- a/hr.html
+++ b/hr.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="performance.html">Performance</a></li>
-            <li><a href="hr.html">HR</a></li>
+            <li><a class="currentpage" href="hr.html">HR</a></li>
             <li><a href="plan.html">Plan</a></li>
         </ul>
     </nav>
