--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a class="currentpage" href="index.html">Home</a></li>
             <li><a href="performance.html">Performance</a></li>
             <li><a href="hr.html">HR</a></li>
             <li><a href="plan.html">Plan</a></li>
