--- a/plan.html
+++ b/plan.html
@@ -28,7 +28,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="performance.html">Performance</a></li>
             <li><a href="hr.html">HR</a></li>
-            <li><a href="plan.html">Plan</a></li>
+            <li><a class="currentpage" href="plan.html">Plan</a></li>
         </ul>
     </nav>
     <main>
